AST/semantic.output
Grammar

    0 $accept: program "EOF"

    1 program: global_declarations main_function "EOF"
    2        | /* empty */

    3 global_declarations: global_declarations global_declaration
    4                    | /* empty */

    5 global_declaration: typedef_declaration
    6                   | enum_declaration
    7                   | class_declaration
    8                   | union_declaration
    9                   | global_var_declaration
   10                   | func_declaration

   11 typedef_declaration: "typedef" typename listspec "id" dims ";"

   12 typename: standard_type
   13         | "id"

   14 standard_type: "char"
   15              | "int"
   16              | "float"
   17              | "string"
   18              | "void"

   19 listspec: "list"
   20         | /* empty */

   21 dims: dims dim
   22     | /* empty */

   23 dim: "[" "iconst" "]"
   24    | "[" "]"

   25 enum_declaration: "enum" "id" enum_body ";"

   26 enum_body: "{" id_list "}"

   27 id_list: id_list "," "id" initializer
   28        | "id" initializer

   29 initializer: "=" init_value
   30            | /* empty */

   31 init_value: expression
   32           | "{" init_values "}"

   33 expression: expression "||" expression
   34           | expression "&&" expression
   35           | expression "==" expression
   36           | expression ">" expression
   37           | expression "+" expression
   38           | expression "*" expression
   39           | "!" expression
   40           | "+" expression
   41           | "sizeop" expression
   42           | "++" variable
   43           | variable "++"
   44           | variable
   45           | variable "(" expression_list ")"
   46           | "length" "(" general_expression ")"
   47           | "new" "(" general_expression ")"
   48           | constant
   49           | "(" general_expression ")"
   50           | "(" standard_type ")"
   51           | listexpression

   52 variable: variable "[" general_expression "]"
   53         | variable "." "id"
   54         | "listfunc" "(" general_expression ")"
   55         | decltype "id"
   56         | "this"

   57 general_expression: general_expression "," general_expression
   58                   | assignment

   59 assignment: variable "=" assignment
   60           | expression

   61 expression_list: general_expression
   62                | /* empty */

   63 constant: "cconst"
   64         | "iconst"
   65         | "fconst"
   66         | "sconst"

   67 listexpression: "[" expression_list "]"

   68 init_values: init_values "," init_value
   69            | init_value

   70 class_declaration: "class" "id" class_body ";"

   71 class_body: parent "{" members_methods "}"

   72 parent: ":" "id"
   73       | /* empty */

   74 members_methods: members_methods access member_or_method
   75                | access member_or_method

   76 access: "private" ":"
   77       | "protected" ":"
   78       | "public" ":"
   79       | /* empty */

   80 member_or_method: member
   81                 | method

   82 member: var_declaration
   83       | anonymous_union

   84 var_declaration: typename variabledefs ";"
   85                | typename variabledefs error

   86 variabledefs: variabledefs "," variabledef
   87             | variabledef

   88 variabledef: listspec "id" dims

   89 anonymous_union: "union" union_body ";"

   90 union_body: "{" fields "}"

   91 fields: fields field
   92       | field

   93 field: var_declaration

   94 method: short_func_declaration

   95 short_func_declaration: short_par_func_header ";"
   96                       | nopar_func_header ";"

   97 short_par_func_header: func_header_start "(" parameter_types ")"

   98 func_header_start: typename listspec "id"

   99 parameter_types: parameter_types "," typename pass_list_dims
  100                | typename pass_list_dims

  101 pass_list_dims: "refer"
  102               | listspec dims

  103 nopar_func_header: func_header_start "(" ")"

  104 union_declaration: "union" "id" union_body ";"

  105 global_var_declaration: typename init_variabledefs ";"

  106 init_variabledefs: init_variabledefs "," init_variabledef
  107                  | init_variabledef

  108 init_variabledef: variabledef initializer

  109 func_declaration: short_func_declaration
  110                 | full_func_declaration

  111 $@1: /* empty */

  112 full_func_declaration: full_par_func_header "{" $@1 decl_statements "}"

  113 $@2: /* empty */

  114 full_func_declaration: nopar_class_func_header "{" $@2 decl_statements "}"

  115 $@3: /* empty */

  116 full_func_declaration: nopar_func_header "{" $@3 decl_statements "}"

  117 full_par_func_header: class_func_header_start "(" parameter_list ")"
  118                     | func_header_start "(" parameter_list ")"

  119 class_func_header_start: typename listspec func_class "id"

  120 func_class: "id" "meth"

  121 parameter_list: parameter_list "," typename pass_variabledef
  122               | typename pass_variabledef

  123 pass_variabledef: variabledef
  124                 | "refer" "id"

  125 nopar_class_func_header: class_func_header_start "(" ")"

  126 decl_statements: declarations statements
  127                | declarations
  128                | statements
  129                | /* empty */

  130 declarations: declarations decltype typename variabledefs ";"
  131             | decltype typename variabledefs ";"

  132 decltype: "static"
  133         | /* empty */

  134 statements: statements statement
  135           | statement

  136 statement: expression_statement
  137          | if_statement
  138          | while_statement
  139          | for_statement
  140          | switch_statement
  141          | return_statement
  142          | io_statement
  143          | comp_statement
  144          | "continue" ";"
  145          | "break" ";"
  146          | ";"

  147 expression_statement: general_expression ";"
  148                     | error ";"

  149 if_statement: "if" "(" general_expression ")" statement if_tail

  150 if_tail: "else" statement
  151        | /* empty */

  152 $@4: /* empty */

  153 while_statement: "while" "(" general_expression ")" $@4 statement

  154 $@5: /* empty */

  155 for_statement: "for" "(" optexpr ";" optexpr ";" optexpr ")" $@5 statement

  156 optexpr: general_expression
  157        | /* empty */

  158 $@6: /* empty */

  159 switch_statement: "switch" "(" general_expression ")" $@6 switch_tail

  160 switch_tail: "{" decl_cases "}"
  161            | single_casestatement

  162 decl_cases: declarations casestatements
  163           | declarations
  164           | casestatements
  165           | /* empty */

  166 casestatements: casestatements casestatement
  167               | casestatement

  168 casestatement: "case" constant ":" casestatement
  169              | "case" constant ":" statements
  170              | "default" ":" statements

  171 single_casestatement: "case" constant ":" single_casestatement
  172                     | "case" constant ":" statement

  173 return_statement: "return" optexpr ";"

  174 io_statement: "cin" "<<" in_list ";"
  175             | "cout" ">>" out_list ";"

  176 in_list: in_list "<<" in_item
  177        | in_item

  178 in_item: variable

  179 out_list: out_list ">>" out_item
  180         | out_item

  181 out_item: general_expression

  182 $@7: /* empty */

  183 comp_statement: "{" $@7 decl_statements "}"

  184 main_function: main_header "{" decl_statements "}"

  185 main_header: "int" "main" "(" ")"


Terminals, with rules where they appear

"EOF" (0) 0 1
error (256) 85 148
"typedef" (258) 11
"char" (259) 14
"int" (260) 15 185
"float" (261) 16
"string" (262) 17
"class" (263) 70
"private" (264) 76
"protected" (265) 77
"public" (266) 78
"void" (267) 18
"static" (268) 132
"union" (269) 89 104
"enum" (270) 25
"list" (271) 19
"continue" (272) 144
"break" (273) 145
"if" (274) 149
"else" (275) 150
"while" (276) 153
"for" (277) 155
"switch" (278) 159
"case" (279) 168 169 171 172
"default" (280) 170
"return" (281) 173
"length" (282) 46
"new" (283) 47
"cin" (284) 174
"cout" (285) 175
"main" (286) 185
"this" (287) 56
"id" (288) 11 13 25 27 28 53 55 70 72 88 98 104 119 120 124
"iconst" (289) 23 64
"fconst" (290) 65
"cconst" (291) 63
"sconst" (292) 66
"||" (293) 33
"&&" (294) 34
"==" (295) 35
">" (296) 36
"+" (297) 37 40
"*" (298) 38
"!" (299) 39
"++" (300) 42 43
"sizeop" (301) 41
"listfunc" (302) 54
"(" (303) 45 46 47 49 50 54 97 103 117 118 125 149 153 155 159 185
")" (304) 45 46 47 49 50 54 97 103 117 118 125 149 153 155 159 185
";" (305) 11 25 70 84 89 95 96 104 105 130 131 144 145 146 147 148
    155 173 174 175
"." (306) 53
"," (307) 27 57 68 86 99 106 121
"=" (308) 29 59
":" (309) 72 76 77 78 168 169 170 171 172
"[" (310) 23 24 52 67
"]" (311) 23 24 52 67
"refer" (312) 101 124
"{" (313) 26 32 71 90 112 114 116 160 183 184
"}" (314) 26 32 71 90 112 114 116 160 183 184
"meth" (315) 120
"<<" (316) 174 176
">>" (317) 175 179
LOWER_THAN_ELSE (318)


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
program (65)
    on left: 1 2, on right: 0
global_declarations (66)
    on left: 3 4, on right: 1 3
global_declaration (67)
    on left: 5 6 7 8 9 10, on right: 3
typedef_declaration (68)
    on left: 11, on right: 5
typename (69)
    on left: 12 13, on right: 11 84 85 98 99 100 105 119 121 122 130
    131
standard_type (70)
    on left: 14 15 16 17 18, on right: 12 50
listspec (71)
    on left: 19 20, on right: 11 88 98 102 119
dims (72)
    on left: 21 22, on right: 11 21 88 102
dim (73)
    on left: 23 24, on right: 21
enum_declaration (74)
    on left: 25, on right: 6
enum_body (75)
    on left: 26, on right: 25
id_list (76)
    on left: 27 28, on right: 26 27
initializer (77)
    on left: 29 30, on right: 27 28 108
init_value (78)
    on left: 31 32, on right: 29 68 69
expression (79)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
    51, on right: 31 33 34 35 36 37 38 39 40 41 60
variable (80)
    on left: 52 53 54 55 56, on right: 42 43 44 45 52 53 59 178
general_expression (81)
    on left: 57 58, on right: 46 47 49 52 54 57 61 147 149 153 156
    159 181
assignment (82)
    on left: 59 60, on right: 58 59
expression_list (83)
    on left: 61 62, on right: 45 67
constant (84)
    on left: 63 64 65 66, on right: 48 168 169 171 172
listexpression (85)
    on left: 67, on right: 51
init_values (86)
    on left: 68 69, on right: 32 68
class_declaration (87)
    on left: 70, on right: 7
class_body (88)
    on left: 71, on right: 70
parent (89)
    on left: 72 73, on right: 71
members_methods (90)
    on left: 74 75, on right: 71 74
access (91)
    on left: 76 77 78 79, on right: 74 75
member_or_method (92)
    on left: 80 81, on right: 74 75
member (93)
    on left: 82 83, on right: 80
var_declaration (94)
    on left: 84 85, on right: 82 93
variabledefs (95)
    on left: 86 87, on right: 84 85 86 130 131
variabledef (96)
    on left: 88, on right: 86 87 108 123
anonymous_union (97)
    on left: 89, on right: 83
union_body (98)
    on left: 90, on right: 89 104
fields (99)
    on left: 91 92, on right: 90 91
field (100)
    on left: 93, on right: 91 92
method (101)
    on left: 94, on right: 81
short_func_declaration (102)
    on left: 95 96, on right: 94 109
short_par_func_header (103)
    on left: 97, on right: 95
func_header_start (104)
    on left: 98, on right: 97 103 118
parameter_types (105)
    on left: 99 100, on right: 97 99
pass_list_dims (106)
    on left: 101 102, on right: 99 100
nopar_func_header (107)
    on left: 103, on right: 96 116
union_declaration (108)
    on left: 104, on right: 8
global_var_declaration (109)
    on left: 105, on right: 9
init_variabledefs (110)
    on left: 106 107, on right: 105 106
init_variabledef (111)
    on left: 108, on right: 106 107
func_declaration (112)
    on left: 109 110, on right: 10
full_func_declaration (113)
    on left: 112 114 116, on right: 110
$@1 (114)
    on left: 111, on right: 112
$@2 (115)
    on left: 113, on right: 114
$@3 (116)
    on left: 115, on right: 116
full_par_func_header (117)
    on left: 117 118, on right: 112
class_func_header_start (118)
    on left: 119, on right: 117 125
func_class (119)
    on left: 120, on right: 119
parameter_list (120)
    on left: 121 122, on right: 117 118 121
pass_variabledef (121)
    on left: 123 124, on right: 121 122
nopar_class_func_header (122)
    on left: 125, on right: 114
decl_statements (123)
    on left: 126 127 128 129, on right: 112 114 116 183 184
declarations (124)
    on left: 130 131, on right: 126 127 130 162 163
decltype (125)
    on left: 132 133, on right: 55 130 131
statements (126)
    on left: 134 135, on right: 126 128 134 169 170
statement (127)
    on left: 136 137 138 139 140 141 142 143 144 145 146, on right:
    134 135 149 150 153 155 172
expression_statement (128)
    on left: 147 148, on right: 136
if_statement (129)
    on left: 149, on right: 137
if_tail (130)
    on left: 150 151, on right: 149
while_statement (131)
    on left: 153, on right: 138
$@4 (132)
    on left: 152, on right: 153
for_statement (133)
    on left: 155, on right: 139
$@5 (134)
    on left: 154, on right: 155
optexpr (135)
    on left: 156 157, on right: 155 173
switch_statement (136)
    on left: 159, on right: 140
$@6 (137)
    on left: 158, on right: 159
switch_tail (138)
    on left: 160 161, on right: 159
decl_cases (139)
    on left: 162 163 164 165, on right: 160
casestatements (140)
    on left: 166 167, on right: 162 164 166
casestatement (141)
    on left: 168 169 170, on right: 166 167 168
single_casestatement (142)
    on left: 171 172, on right: 161 171
return_statement (143)
    on left: 173, on right: 141
io_statement (144)
    on left: 174 175, on right: 142
in_list (145)
    on left: 176 177, on right: 174 176
in_item (146)
    on left: 178, on right: 176 177
out_list (147)
    on left: 179 180, on right: 175 179
out_item (148)
    on left: 181, on right: 179 180
comp_statement (149)
    on left: 183, on right: 143
$@7 (150)
    on left: 182, on right: 183
main_function (151)
    on left: 184, on right: 1
main_header (152)
    on left: 185, on right: 184


state 0

    0 $accept: . program "EOF"

    "EOF"     reduce using rule 2 (program)
    $default  reduce using rule 4 (global_declarations)

    program              go to state 1
    global_declarations  go to state 2


state 1

    0 $accept: program . "EOF"

    "EOF"  shift, and go to state 3


state 2

    1 program: global_declarations . main_function "EOF"
    3 global_declarations: global_declarations . global_declaration

    "typedef"  shift, and go to state 4
    "char"     shift, and go to state 5
    "int"      shift, and go to state 6
    "float"    shift, and go to state 7
    "string"   shift, and go to state 8
    "class"    shift, and go to state 9
    "void"     shift, and go to state 10
    "union"    shift, and go to state 11
    "enum"     shift, and go to state 12
    "id"       shift, and go to state 13

    global_declaration       go to state 14
    typedef_declaration      go to state 15
    typename                 go to state 16
    standard_type            go to state 17
    enum_declaration         go to state 18
    class_declaration        go to state 19
    short_func_declaration   go to state 20
    short_par_func_header    go to state 21
    func_header_start        go to state 22
    nopar_func_header        go to state 23
    union_declaration        go to state 24
    global_var_declaration   go to state 25
    func_declaration         go to state 26
    full_func_declaration    go to state 27
    full_par_func_header     go to state 28
    class_func_header_start  go to state 29
    nopar_class_func_header  go to state 30
    main_function            go to state 31
    main_header              go to state 32


state 3

    0 $accept: program "EOF" .

    $default  accept


state 4

   11 typedef_declaration: "typedef" . typename listspec "id" dims ";"

    "char"    shift, and go to state 5
    "int"     shift, and go to state 33
    "float"   shift, and go to state 7
    "string"  shift, and go to state 8
    "void"    shift, and go to state 10
    "id"      shift, and go to state 13

    typename       go to state 34
    standard_type  go to state 17


state 5

   14 standard_type: "char" .

    $default  reduce using rule 14 (standard_type)


state 6

   15 standard_type: "int" .
  185 main_header: "int" . "main" "(" ")"

    "main"  shift, and go to state 35

    $default  reduce using rule 15 (standard_type)


state 7

   16 standard_type: "float" .

    $default  reduce using rule 16 (standard_type)


state 8

   17 standard_type: "string" .

    $default  reduce using rule 17 (standard_type)


state 9

   70 class_declaration: "class" . "id" class_body ";"

    "id"  shift, and go to state 36


state 10

   18 standard_type: "void" .

    $default  reduce using rule 18 (standard_type)


state 11

  104 union_declaration: "union" . "id" union_body ";"

    "id"  shift, and go to state 37


state 12

   25 enum_declaration: "enum" . "id" enum_body ";"

    "id"  shift, and go to state 38


state 13

   13 typename: "id" .

    $default  reduce using rule 13 (typename)


state 14

    3 global_declarations: global_declarations global_declaration .

    $default  reduce using rule 3 (global_declarations)


state 15

    5 global_declaration: typedef_declaration .

    $default  reduce using rule 5 (global_declaration)


state 16

   98 func_header_start: typename . listspec "id"
  105 global_var_declaration: typename . init_variabledefs ";"
  119 class_func_header_start: typename . listspec func_class "id"

    "list"  shift, and go to state 39

    $default  reduce using rule 20 (listspec)

    listspec           go to state 40
    variabledef        go to state 41
    init_variabledefs  go to state 42
    init_variabledef   go to state 43


state 17

   12 typename: standard_type .

    $default  reduce using rule 12 (typename)


state 18

    6 global_declaration: enum_declaration .

    $default  reduce using rule 6 (global_declaration)


state 19

    7 global_declaration: class_declaration .

    $default  reduce using rule 7 (global_declaration)


state 20

  109 func_declaration: short_func_declaration .

    $default  reduce using rule 109 (func_declaration)


state 21

   95 short_func_declaration: short_par_func_header . ";"

    ";"  shift, and go to state 44


state 22

   97 short_par_func_header: func_header_start . "(" parameter_types ")"
  103 nopar_func_header: func_header_start . "(" ")"
  118 full_par_func_header: func_header_start . "(" parameter_list ")"

    "("  shift, and go to state 45


state 23

   96 short_func_declaration: nopar_func_header . ";"
  116 full_func_declaration: nopar_func_header . "{" $@3 decl_statements "}"

    ";"  shift, and go to state 46
    "{"  shift, and go to state 47


state 24

    8 global_declaration: union_declaration .

    $default  reduce using rule 8 (global_declaration)


state 25

    9 global_declaration: global_var_declaration .

    $default  reduce using rule 9 (global_declaration)


state 26

   10 global_declaration: func_declaration .

    $default  reduce using rule 10 (global_declaration)


state 27

  110 func_declaration: full_func_declaration .

    $default  reduce using rule 110 (func_declaration)


state 28

  112 full_func_declaration: full_par_func_header . "{" $@1 decl_statements "}"

    "{"  shift, and go to state 48


state 29

  117 full_par_func_header: class_func_header_start . "(" parameter_list ")"
  125 nopar_class_func_header: class_func_header_start . "(" ")"

    "("  shift, and go to state 49


state 30

  114 full_func_declaration: nopar_class_func_header . "{" $@2 decl_statements "}"

    "{"  shift, and go to state 50


state 31

    1 program: global_declarations main_function . "EOF"

    "EOF"  shift, and go to state 51


state 32

  184 main_function: main_header . "{" decl_statements "}"

    "{"  shift, and go to state 52


state 33

   15 standard_type: "int" .

    $default  reduce using rule 15 (standard_type)


state 34

   11 typedef_declaration: "typedef" typename . listspec "id" dims ";"

    "list"  shift, and go to state 39

    $default  reduce using rule 20 (listspec)

    listspec  go to state 53


state 35

  185 main_header: "int" "main" . "(" ")"

    "("  shift, and go to state 54


state 36

   70 class_declaration: "class" "id" . class_body ";"

    ":"  shift, and go to state 55

    $default  reduce using rule 73 (parent)

    class_body  go to state 56
    parent      go to state 57


state 37

  104 union_declaration: "union" "id" . union_body ";"

    "{"  shift, and go to state 58

    union_body  go to state 59


state 38

   25 enum_declaration: "enum" "id" . enum_body ";"

    "{"  shift, and go to state 60

    enum_body  go to state 61


state 39

   19 listspec: "list" .

    $default  reduce using rule 19 (listspec)


state 40

   88 variabledef: listspec . "id" dims
   98 func_header_start: typename listspec . "id"
  119 class_func_header_start: typename listspec . func_class "id"

    "id"  shift, and go to state 62

    func_class  go to state 63


state 41

  108 init_variabledef: variabledef . initializer

    "="  shift, and go to state 64

    $default  reduce using rule 30 (initializer)

    initializer  go to state 65


state 42

  105 global_var_declaration: typename init_variabledefs . ";"
  106 init_variabledefs: init_variabledefs . "," init_variabledef

    ";"  shift, and go to state 66
    ","  shift, and go to state 67


state 43

  107 init_variabledefs: init_variabledef .

    $default  reduce using rule 107 (init_variabledefs)


state 44

   95 short_func_declaration: short_par_func_header ";" .

    $default  reduce using rule 95 (short_func_declaration)


state 45

   97 short_par_func_header: func_header_start "(" . parameter_types ")"
  103 nopar_func_header: func_header_start "(" . ")"
  118 full_par_func_header: func_header_start "(" . parameter_list ")"

    "char"    shift, and go to state 5
    "int"     shift, and go to state 33
    "float"   shift, and go to state 7
    "string"  shift, and go to state 8
    "void"    shift, and go to state 10
    "id"      shift, and go to state 13
    ")"       shift, and go to state 68

    typename         go to state 69
    standard_type    go to state 17
    parameter_types  go to state 70
    parameter_list   go to state 71


state 46

   96 short_func_declaration: nopar_func_header ";" .

    $default  reduce using rule 96 (short_func_declaration)


state 47

  116 full_func_declaration: nopar_func_header "{" . $@3 decl_statements "}"

    $default  reduce using rule 115 ($@3)

    $@3  go to state 72


state 48

  112 full_func_declaration: full_par_func_header "{" . $@1 decl_statements "}"

    $default  reduce using rule 111 ($@1)

    $@1  go to state 73


state 49

  117 full_par_func_header: class_func_header_start "(" . parameter_list ")"
  125 nopar_class_func_header: class_func_header_start "(" . ")"

    "char"    shift, and go to state 5
    "int"     shift, and go to state 33
    "float"   shift, and go to state 7
    "string"  shift, and go to state 8
    "void"    shift, and go to state 10
    "id"      shift, and go to state 13
    ")"       shift, and go to state 74

    typename        go to state 75
    standard_type   go to state 17
    parameter_list  go to state 76


state 50

  114 full_func_declaration: nopar_class_func_header "{" . $@2 decl_statements "}"

    $default  reduce using rule 113 ($@2)

    $@2  go to state 77


state 51

    1 program: global_declarations main_function "EOF" .

    $default  reduce using rule 1 (program)


state 52

  184 main_function: main_header "{" . decl_statements "}"

    error       shift, and go to state 78
    "static"    shift, and go to state 79
    "continue"  shift, and go to state 80
    "break"     shift, and go to state 81
    "if"        shift, and go to state 82
    "while"     shift, and go to state 83
    "for"       shift, and go to state 84
    "switch"    shift, and go to state 85
    "return"    shift, and go to state 86
    "length"    shift, and go to state 87
    "new"       shift, and go to state 88
    "cin"       shift, and go to state 89
    "cout"      shift, and go to state 90
    "this"      shift, and go to state 91
    "iconst"    shift, and go to state 92
    "fconst"    shift, and go to state 93
    "cconst"    shift, and go to state 94
    "sconst"    shift, and go to state 95
    "+"         shift, and go to state 96
    "!"         shift, and go to state 97
    "++"        shift, and go to state 98
    "sizeop"    shift, and go to state 99
    "listfunc"  shift, and go to state 100
    "("         shift, and go to state 101
    ";"         shift, and go to state 102
    "["         shift, and go to state 103
    "{"         shift, and go to state 104

    "char"    reduce using rule 133 (decltype)
    "int"     reduce using rule 133 (decltype)
    "float"   reduce using rule 133 (decltype)
    "string"  reduce using rule 133 (decltype)
    "void"    reduce using rule 133 (decltype)
    "id"      reduce using rule 133 (decltype)
    "}"       reduce using rule 129 (decl_statements)

    expression            go to state 105
    variable              go to state 106
    general_expression    go to state 107
    assignment            go to state 108
    constant              go to state 109
    listexpression        go to state 110
    decl_statements       go to state 111
    declarations          go to state 112
    decltype              go to state 113
    statements            go to state 114
    statement             go to state 115
    expression_statement  go to state 116
    if_statement          go to state 117
    while_statement       go to state 118
    for_statement         go to state 119
    switch_statement      go to state 120
    return_statement      go to state 121
    io_statement          go to state 122
    comp_statement        go to state 123


state 53

   11 typedef_declaration: "typedef" typename listspec . "id" dims ";"

    "id"  shift, and go to state 124


state 54

  185 main_header: "int" "main" "(" . ")"

    ")"  shift, and go to state 125


state 55

   72 parent: ":" . "id"

    "id"  shift, and go to state 126


state 56

   70 class_declaration: "class" "id" class_body . ";"

    ";"  shift, and go to state 127


state 57

   71 class_body: parent . "{" members_methods "}"

    "{"  shift, and go to state 128


state 58

   90 union_body: "{" . fields "}"

    "char"    shift, and go to state 5
    "int"     shift, and go to state 33
    "float"   shift, and go to state 7
    "string"  shift, and go to state 8
    "void"    shift, and go to state 10
    "id"      shift, and go to state 13

    typename         go to state 129
    standard_type    go to state 17
    var_declaration  go to state 130
    fields           go to state 131
    field            go to state 132


state 59

  104 union_declaration: "union" "id" union_body . ";"

    ";"  shift, and go to state 133


state 60

   26 enum_body: "{" . id_list "}"

    "id"  shift, and go to state 134

    id_list  go to state 135


state 61

   25 enum_declaration: "enum" "id" enum_body . ";"

    ";"  shift, and go to state 136


state 62

   88 variabledef: listspec "id" . dims
   98 func_header_start: typename listspec "id" .
  120 func_class: "id" . "meth"

    "meth"  shift, and go to state 137

    "("       reduce using rule 98 (func_header_start)
    $default  reduce using rule 22 (dims)

    dims  go to state 138


state 63

  119 class_func_header_start: typename listspec func_class . "id"

    "id"  shift, and go to state 139


state 64

   29 initializer: "=" . init_value

    "static"    shift, and go to state 79
    "length"    shift, and go to state 87
    "new"       shift, and go to state 88
    "this"      shift, and go to state 91
    "iconst"    shift, and go to state 92
    "fconst"    shift, and go to state 93
    "cconst"    shift, and go to state 94
    "sconst"    shift, and go to state 95
    "+"         shift, and go to state 96
    "!"         shift, and go to state 97
    "++"        shift, and go to state 98
    "sizeop"    shift, and go to state 99
    "listfunc"  shift, and go to state 100
    "("         shift, and go to state 101
    "["         shift, and go to state 103
    "{"         shift, and go to state 140

    $default  reduce using rule 133 (decltype)

    init_value      go to state 141
    expression      go to state 142
    variable        go to state 143
    constant        go to state 109
    listexpression  go to state 110
    decltype        go to state 144


state 65

  108 init_variabledef: variabledef initializer .

    $default  reduce using rule 108 (init_variabledef)


state 66

  105 global_var_declaration: typename init_variabledefs ";" .

    $default  reduce using rule 105 (global_var_declaration)


state 67

  106 init_variabledefs: init_variabledefs "," . init_variabledef

    "list"  shift, and go to state 39

    $default  reduce using rule 20 (listspec)

    listspec          go to state 145
    variabledef       go to state 41
    init_variabledef  go to state 146


state 68

  103 nopar_func_header: func_header_start "(" ")" .

    $default  reduce using rule 103 (nopar_func_header)


state 69

  100 parameter_types: typename . pass_list_dims
  122 parameter_list: typename . pass_variabledef

    "list"   shift, and go to state 39
    "refer"  shift, and go to state 147

    $default  reduce using rule 20 (listspec)

    listspec          go to state 148
    variabledef       go to state 149
    pass_list_dims    go to state 150
    pass_variabledef  go to state 151


state 70

   97 short_par_func_header: func_header_start "(" parameter_types . ")"
   99 parameter_types: parameter_types . "," typename pass_list_dims

    ")"  shift, and go to state 152
    ","  shift, and go to state 153


state 71

  118 full_par_func_header: func_header_start "(" parameter_list . ")"
  121 parameter_list: parameter_list . "," typename pass_variabledef

    ")"  shift, and go to state 154
    ","  shift, and go to state 155


state 72

  116 full_func_declaration: nopar_func_header "{" $@3 . decl_statements "}"

    error       shift, and go to state 78
    "static"    shift, and go to state 79
    "continue"  shift, and go to state 80
    "break"     shift, and go to state 81
    "if"        shift, and go to state 82
    "while"     shift, and go to state 83
    "for"       shift, and go to state 84
    "switch"    shift, and go to state 85
    "return"    shift, and go to state 86
    "length"    shift, and go to state 87
    "new"       shift, and go to state 88
    "cin"       shift, and go to state 89
    "cout"      shift, and go to state 90
    "this"      shift, and go to state 91
    "iconst"    shift, and go to state 92
    "fconst"    shift, and go to state 93
    "cconst"    shift, and go to state 94
    "sconst"    shift, and go to state 95
    "+"         shift, and go to state 96
    "!"         shift, and go to state 97
    "++"        shift, and go to state 98
    "sizeop"    shift, and go to state 99
    "listfunc"  shift, and go to state 100
    "("         shift, and go to state 101
    ";"         shift, and go to state 102
    "["         shift, and go to state 103
    "{"         shift, and go to state 104

    "char"    reduce using rule 133 (decltype)
    "int"     reduce using rule 133 (decltype)
    "float"   reduce using rule 133 (decltype)
    "string"  reduce using rule 133 (decltype)
    "void"    reduce using rule 133 (decltype)
    "id"      reduce using rule 133 (decltype)
    "}"       reduce using rule 129 (decl_statements)

    expression            go to state 105
    variable              go to state 106
    general_expression    go to state 107
    assignment            go to state 108
    constant              go to state 109
    listexpression        go to state 110
    decl_statements       go to state 156
    declarations          go to state 112
    decltype              go to state 113
    statements            go to state 114
    statement             go to state 115
    expression_statement  go to state 116
    if_statement          go to state 117
    while_statement       go to state 118
    for_statement         go to state 119
    switch_statement      go to state 120
    return_statement      go to state 121
    io_statement          go to state 122
    comp_statement        go to state 123


state 73

  112 full_func_declaration: full_par_func_header "{" $@1 . decl_statements "}"

    error       shift, and go to state 78
    "static"    shift, and go to state 79
    "continue"  shift, and go to state 80
    "break"     shift, and go to state 81
    "if"        shift, and go to state 82
    "while"     shift, and go to state 83
    "for"       shift, and go to state 84
    "switch"    shift, and go to state 85
    "return"    shift, and go to state 86
    "length"    shift, and go to state 87
    "new"       shift, and go to state 88
    "cin"       shift, and go to state 89
    "cout"      shift, and go to state 90
    "this"      shift, and go to state 91
    "iconst"    shift, and go to state 92
    "fconst"    shift, and go to state 93
    "cconst"    shift, and go to state 94
    "sconst"    shift, and go to state 95
    "+"         shift, and go to state 96
    "!"         shift, and go to state 97
    "++"        shift, and go to state 98
    "sizeop"    shift, and go to state 99
    "listfunc"  shift, and go to state 100
    "("         shift, and go to state 101
    ";"         shift, and go to state 102
    "["         shift, and go to state 103
    "{"         shift, and go to state 104

    "char"    reduce using rule 133 (decltype)
    "int"     reduce using rule 133 (decltype)
    "float"   reduce using rule 133 (decltype)
    "string"  reduce using rule 133 (decltype)
    "void"    reduce using rule 133 (decltype)
    "id"      reduce using rule 133 (decltype)
    "}"       reduce using rule 129 (decl_statements)

    expression            go to state 105
    variable              go to state 106
    general_expression    go to state 107
    assignment            go to state 108
    constant              go to state 109
    listexpression        go to state 110
    decl_statements       go to state 157
    declarations          go to state 112
    decltype              go to state 113
    statements            go to state 114
    statement             go to state 115
    expression_statement  go to state 116
    if_statement          go to state 117
    while_statement       go to state 118
    for_statement         go to state 119
    switch_statement      go to state 120
    return_statement      go to state 121
    io_statement          go to state 122
    comp_statement        go to state 123


state 74

  125 nopar_class_func_header: class_func_header_start "(" ")" .

    $default  reduce using rule 125 (nopar_class_func_header)


state 75

  122 parameter_list: typename . pass_variabledef

    "list"   shift, and go to state 39
    "refer"  shift, and go to state 158

    $default  reduce using rule 20 (listspec)

    listspec          go to state 145
    variabledef       go to state 149
    pass_variabledef  go to state 151


state 76

  117 full_par_func_header: class_func_header_start "(" parameter_list . ")"
  121 parameter_list: parameter_list . "," typename pass_variabledef

    ")"  shift, and go to state 159
    ","  shift, and go to state 155


state 77

  114 full_func_declaration: nopar_class_func_header "{" $@2 . decl_statements "}"

    error       shift, and go to state 78
    "static"    shift, and go to state 79
    "continue"  shift, and go to state 80
    "break"     shift, and go to state 81
    "if"        shift, and go to state 82
    "while"     shift, and go to state 83
    "for"       shift, and go to state 84
    "switch"    shift, and go to state 85
    "return"    shift, and go to state 86
    "length"    shift, and go to state 87
    "new"       shift, and go to state 88
    "cin"       shift, and go to state 89
    "cout"      shift, and go to state 90
    "this"      shift, and go to state 91
    "iconst"    shift, and go to state 92
    "fconst"    shift, and go to state 93
    "cconst"    shift, and go to state 94
    "sconst"    shift, and go to state 95
    "+"         shift, and go to state 96
    "!"         shift, and go to state 97
    "++"        shift, and go to state 98
    "sizeop"    shift, and go to state 99
    "listfunc"  shift, and go to state 100
    "("         shift, and go to state 101
    ";"         shift, and go to state 102
    "["         shift, and go to state 103
    "{"         shift, and go to state 104

    "char"    reduce using rule 133 (decltype)
    "int"     reduce using rule 133 (decltype)
    "float"   reduce using rule 133 (decltype)
    "string"  reduce using rule 133 (decltype)
    "void"    reduce using rule 133 (decltype)
    "id"      reduce using rule 133 (decltype)
    "}"       reduce using rule 129 (decl_statements)

    expression            go to state 105
    variable              go to state 106
    general_expression    go to state 107
    assignment            go to state 108
    constant              go to state 109
    listexpression        go to state 110
    decl_statements       go to state 160
    declarations          go to state 112
    decltype              go to state 113
    statements            go to state 114
    statement             go to state 115
    expression_statement  go to state 116
    if_statement          go to state 117
    while_statement       go to state 118
    for_statement         go to state 119
    switch_statement      go to state 120
    return_statement      go to state 121
    io_statement          go to state 122
    comp_statement        go to state 123


state 78

  148 expression_statement: error . ";"

    ";"  shift, and go to state 161


state 79

  132 decltype: "static" .

    $default  reduce using rule 132 (decltype)


state 80

  144 statement: "continue" . ";"

    ";"  shift, and go to state 162


state 81

  145 statement: "break" . ";"

    ";"  shift, and go to state 163


state 82
